added last tests and fixed bugs

--- a/LabW6Group10.ipynb
+++ b/LabW6Group10.ipynb
@@ -346,7 +346,7 @@
     "\n",
     "class SeasonalFluVirus(Infectable):\n",
     "    def cause_symptoms(self, person: Person):\n",
-    "        person.temperature += 1.0\n",
+    "        person.temperature += self.strength * 1.0\n",
     "        \n",
     "    def get_type(self):\n",
     "        return InfectableType.SeasonalFlu\n",
@@ -354,7 +354,7 @@
     "    \n",
     "class SARSCoV2(Infectable):\n",
     "    def cause_symptoms(self, person: Person):\n",
-    "        person.temperature += expovariate(0.4)\n",
+    "        person.temperature += self.strength * expovariate(0.4)\n",
     "        \n",
     "    def get_type(self):\n",
     "        return InfectableType.SARSCoV2\n",
@@ -362,7 +362,7 @@
     "    \n",
     "class Cholera(Infectable):\n",
     "    def cause_symptoms(self, person: Person):\n",
-    "        person.water -= expovariate(25.0) * person.weight\n",
+    "        person.water -= self.strength * expovariate(25.0) * person.weight\n",
     "    \n",
     "    def get_type(self):\n",
     "        return InfectableType.Cholera\n",
@@ -1103,10 +1103,10 @@
     "        \n",
     "        person1.virus = get_infectable(InfectableType.SeasonalFlu)\n",
     "        person1.state = SymptomaticSick(person1)\n",
-    "        person2.antibody_types = get_infectable(InfectableType.SeasonalFlu)\n",
+    "        person2.antibody_types = set([InfectableType.SeasonalFlu])\n",
     "        person2.state = Healthy(person2)\n",
     "        \n",
-    "        person2.interact(person2)\n",
+    "        person1.interact(person2)\n",
     "        result_state = person2.state\n",
     "        self.assertIsInstance(result_state, Healthy) \n",
     "        \n",
@@ -1116,10 +1116,10 @@
     "        \n",
     "        person1.virus = get_infectable(InfectableType.SARSCoV2)\n",
     "        person1.state = SymptomaticSick(person1)\n",
-    "        person2.antibody_types = get_infectable(InfectableType.SARSCoV2)\n",
+    "        person2.antibody_types = set([InfectableType.SARSCoV2])\n",
     "        person2.state = Healthy(person2)\n",
     "        \n",
-    "        person2.interact(person2)\n",
+    "        person1.interact(person2)\n",
     "        result_state = person2.state\n",
     "        self.assertIsInstance(result_state, Healthy) \n",
     "    \n",
@@ -1129,10 +1129,10 @@
     "        \n",
     "        person1.virus = get_infectable(InfectableType.Cholera)\n",
     "        person1.state = SymptomaticSick(person1)\n",
-    "        person2.antibody_types = get_infectable(InfectableType.Cholera)\n",
+    "        person2.antibody_types = set([InfectableType.Cholera])\n",
     "        person2.state = Healthy(person2)\n",
     "        \n",
-    "        person2.interact(person2)\n",
+    "        person1.interact(person2)\n",
     "        result_state = person2.state\n",
     "        self.assertIsInstance(result_state, Healthy)"
    ]
@@ -1231,7 +1231,6 @@
     "        person.state = SymptomaticSick(person)\n",
     "        person.virus.strength = 0\n",
     "        \n",
-    "        person.day_actions()\n",
     "        person.night_actions()\n",
     "        result_state = person.state\n",
     "        self.assertIsInstance(result_state, Healthy)\n",
@@ -1243,7 +1242,6 @@
     "        person.state = SymptomaticSick(person)\n",
     "        person.virus.strength = 0\n",
     "        \n",
-    "        person.day_actions()\n",
     "        person.night_actions()\n",
     "        result_state = person.state\n",
     "        self.assertIsInstance(result_state, Healthy)\n",
@@ -1255,7 +1253,6 @@
     "        person.state = SymptomaticSick(person)\n",
     "        person.virus.strength = 0\n",
     "        \n",
-    "        person.day_actions()\n",
     "        person.night_actions()\n",
     "        result_state = person.state\n",
     "        self.assertIsInstance(result_state, Healthy)"
@@ -1381,10 +1378,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class LossOfStrength(unittest.TestCase):\n",
+    "\n",
+    "        @classmethod \n",
+    "        def setUpClass(cls):  \n",
+    "            cls.observer = create_observer()\n",
+    "            cls.health_dept = create_department_of_health([], cls.observer)\n",
+    "                           \n",
+    "        def test_loss_Cholera(self):\n",
+    "            person = DefaultPerson(health_dept=self.health_dept)\n",
+    "            person.virus = get_infectable(InfectableType.Cholera)\n",
+    "        \n",
+    "            person.state = SymptomaticSick(person)\n",
+    "            init_status = person.virus.strength\n",
+    "          \n",
+    "            person.night_actions()\n",
+    "          \n",
+    "            while isinstance(person.state, SymptomaticSick):\n",
+    "                result_status = person.virus.strength\n",
+    "                self.assertTrue(result_status < init_status)\n",
+    "             \n",
+    "                person.day_actions()\n",
+    "                if person.virus:\n",
+    "                    init_status = person.virus.strength\n",
+    "                person.night_actions()\n",
+    "                           \n",
+    "        def test_loss_SeasonalFlu(self):\n",
+    "            person = DefaultPerson(health_dept=self.health_dept)\n",
+    "            person.virus = get_infectable(InfectableType.SeasonalFlu)\n",
+    "        \n",
+    "            person.state = SymptomaticSick(person)\n",
+    "            init_status = person.virus.strength\n",
+    "          \n",
+    "            person.night_actions()\n",
+    "          \n",
+    "            while isinstance(person.state, SymptomaticSick):\n",
+    "                result_status = person.virus.strength\n",
+    "                self.assertTrue(result_status < init_status)\n",
+    "             \n",
+    "                person.day_actions()\n",
+    "                if person.virus:\n",
+    "                    init_status = person.virus.strength\n",
+    "                person.night_actions()\n",
+    "                \n",
+    "                           \n",
+    "        def test_loss_SARSCoV2(self):\n",
+    "            person = DefaultPerson(health_dept=self.health_dept)\n",
+    "            person.virus = get_infectable(InfectableType.SARSCoV2)\n",
+    "        \n",
+    "            person.state = SymptomaticSick(person)\n",
+    "            init_status = person.virus.strength\n",
+    "          \n",
+    "            person.night_actions()\n",
+    "          \n",
+    "            while isinstance(person.state, SymptomaticSick):\n",
+    "                result_status = person.virus.strength\n",
+    "                self.assertTrue(result_status < init_status)\n",
+    "             \n",
+    "                person.day_actions()\n",
+    "                if person.virus:\n",
+    "                    init_status = person.virus.strength\n",
+    "                person.night_actions()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1395,10 +1454,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "    class CheckAntibody(unittest.TestCase):\n",
+    "    \n",
+    "        @classmethod  \n",
+    "        def setUpClass(cls):  \n",
+    "            cls.observer = create_observer()\n",
+    "            cls.health_dept = create_department_of_health([], cls.observer)\n",
+    "        \n",
+    "        def test_antibody_SARSCoV2(self):\n",
+    "            person = DefaultPerson(health_dept=self.health_dept)\n",
+    "            \n",
+    "            person.virus = get_infectable(InfectableType.SARSCoV2)\n",
+    "            person.state = SymptomaticSick(person)\n",
+    "            person.virus.strength = 0\n",
+    "            \n",
+    "            person.night_actions()\n",
+    "            result_antibody = person.antibody_types\n",
+    "            self.assertIn(InfectableType.SARSCoV2, result_antibody)\n",
+    "        \n",
+    "        def test_antibody_Cholera(self):\n",
+    "            person = DefaultPerson(health_dept=self.health_dept)\n",
+    "            \n",
+    "            person.virus = get_infectable(InfectableType.Cholera)\n",
+    "            person.state = SymptomaticSick(person)\n",
+    "            person.virus.strength = 0\n",
+    "            \n",
+    "            person.night_actions()\n",
+    "            result_antibody = person.antibody_types\n",
+    "            self.assertIn(InfectableType.Cholera, result_antibody)\n",
+    "        \n",
+    "        \n",
+    "        def test_antibody_SeasonalFlu(self):\n",
+    "            person = DefaultPerson(health_dept=self.health_dept)\n",
+    "            \n",
+    "            person.virus = get_infectable(InfectableType.SeasonalFlu)\n",
+    "            person.state = SymptomaticSick(person)\n",
+    "            person.virus.strength = 0\n",
+    "            \n",
+    "            person.night_actions()\n",
+    "            result_antibody = person.antibody_types\n",
+    "            self.assertIn(InfectableType.SeasonalFlu, result_antibody)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1409,33 +1509,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class PersonHospitalization(unittest.TestCase):\n",
+    "    \n",
+    "    def testPersonHospitalize_SeasonalFlu_temperature(self):\n",
+    "        observer = create_observer()\n",
+    "        health_dept = create_department_of_health([Hospital(capacity=50)], observer)\n",
+    "        \n",
+    "        person = DefaultPerson(health_dept = health_dept)\n",
+    "        \n",
+    "        person.virus = get_infectable(InfectableType.SeasonalFlu)\n",
+    "        person.state = SymptomaticSick(person)\n",
+    "        person.temperature = 40.0\n",
+    "        person.day_actions()\n",
+    "        self.assertIn(person, person.health_dept.hospitals[0].patients)\n",
+    "        \n",
+    "    \n",
+    "    def testPersonHospitalize_SeasonalFlu_water(self):\n",
+    "        observer = create_observer()\n",
+    "        health_dept = create_department_of_health([Hospital(capacity=50)], observer)\n",
+    "        \n",
+    "        person = DefaultPerson(health_dept = health_dept)\n",
+    "        \n",
+    "        person.virus = get_infectable(InfectableType.SeasonalFlu)\n",
+    "        person.state = SymptomaticSick(person)\n",
+    "        person.water = 0.5 * person.weight\n",
+    "        person.day_actions()\n",
+    "        self.assertIn(person, person.health_dept.hospitals[0].patients)\n",
+    "        \n",
+    "    def testPersonHospitalize_SARSCoV2_temperature(self):\n",
+    "        observer = create_observer()\n",
+    "        health_dept = create_department_of_health([Hospital(capacity=50)], observer)\n",
+    "        \n",
+    "        person = DefaultPerson(health_dept = health_dept)\n",
+    "        \n",
+    "        person.virus = get_infectable(InfectableType.SARSCoV2)\n",
+    "        person.state = SymptomaticSick(person)\n",
+    "        person.temperature = 40.0\n",
+    "        person.day_actions()\n",
+    "        self.assertIn(person, person.health_dept.hospitals[0].patients)\n",
+    "        \n",
+    "    \n",
+    "    def testPersonHospitalize_SARSCoV2_water(self):\n",
+    "        observer = create_observer()\n",
+    "        health_dept = create_department_of_health([Hospital(capacity=50)], observer)\n",
+    "        \n",
+    "        person = DefaultPerson(health_dept = health_dept)\n",
+    "        \n",
+    "        person.virus = get_infectable(InfectableType.SARSCoV2)\n",
+    "        person.state = SymptomaticSick(person)\n",
+    "        person.water = 0.5 * person.weight\n",
+    "        person.day_actions()\n",
+    "        self.assertIn(person, person.health_dept.hospitals[0].patients)\n",
+    "        \n",
+    "        \n",
+    "    def testPersonHospitalize_Cholera_temperature(self):\n",
+    "        observer = create_observer()\n",
+    "        health_dept = create_department_of_health([Hospital(capacity=50)], observer)\n",
+    "        \n",
+    "        person = DefaultPerson(health_dept = health_dept)\n",
+    "        \n",
+    "        person.virus = get_infectable(InfectableType.Cholera)\n",
+    "        person.state = SymptomaticSick(person)\n",
+    "        person.temperature = 40.0\n",
+    "        person.day_actions()\n",
+    "        self.assertIn(person, person.health_dept.hospitals[0].patients)\n",
+    "        \n",
+    "    \n",
+    "    def testPersonHospitalize_Cholera_water(self):\n",
+    "        observer = create_observer()\n",
+    "        health_dept = create_department_of_health([Hospital(capacity=50)], observer)\n",
+    "        \n",
+    "        person = DefaultPerson(health_dept = health_dept)\n",
+    "        \n",
+    "        person.virus = get_infectable(InfectableType.Cholera)\n",
+    "        person.state = SymptomaticSick(person)\n",
+    "        person.water = 0.5 * person.weight\n",
+    "        person.day_actions()\n",
+    "        self.assertIn(person, person.health_dept.hospitals[0].patients)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "............F.....\n",
-      "======================================================================\n",
-      "FAIL: test_symptoms_Cholera (__main__.PersonGettingAffected)\n",
+      "..............................\n",
       "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"<ipython-input-23-f31e1bd12a3f>\", line 40, in test_symptoms_Cholera\n",
-      "    self.assertTrue(result_status < init_status)\n",
-      "AssertionError: False is not true\n",
+      "Ran 30 tests in 0.029s\n",
       "\n",
-      "----------------------------------------------------------------------\n",
-      "Ran 18 tests in 0.013s\n",
-      "\n",
-      "FAILED (failures=1)\n"
+      "OK\n"
      ]
     }
    ],
